fix spacing

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,3 +1,18 @@
+body {
+    margin-left: 15%;
+    margin-right: 15%;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+img {
+    width: 80%;
+}
+
 th, td {
     padding: 10px;
 }
